syntax = "proto3";
package provenance.reward.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "cosmos/base/v1beta1/coin.proto";
import "provenance/reward/v1/reward.proto";

option go_package          = "github.com/provenance-io/provenance/x/reward/types";
option java_package        = "io.provenance.reward.v1";
option java_multiple_files = true;

// Msg
service Msg {

  rpc CreateRewardProgram(MsgCreateRewardProgramRequest) returns (MsgCreateRewardProgramResponse);

  // // WriteCritera
  // rpc WriteCritera(MsgWriteCriteraRequest) returns (MsgWriteCriteraResponse);
  // // AddToCritera
  // rpc AddToCritera(MsgAddToCriteraRequest) returns (MsgAddToCriteraResponse);
}

message MsgCreateRewardProgramRequest {
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;

  string                    title                   = 1;
  string                    description             = 2;
  uint64                    rewardProgramId         = 3;
  string                    distribute_from_address = 4; // community pool for now
  cosmos.base.v1beta1.Coin  coin                    = 5 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin  max_reward_by_address   = 6 [(gogoproto.nullable) = false];
  google.protobuf.Timestamp program_start_time      = 7 [
    (gogoproto.stdtime)  = true,
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "program_start_time,omitempty",
    (gogoproto.moretags) = "yaml:\"program_start_time,omitempty\""
  ];
  string epoch_type    = 8; // EpochInfo defines the type of epoch attributed to this program.(e.g day,week,month)
  uint64 number_epochs = 9; // number of epochs this program will last for
  EligibilityCriteria eligibility_criteria = 10
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"eligibility_criteria\""];
}

message MsgCreateRewardProgramResponse {}

// // MsgWriteCriteraRequest
// message MsgWriteCriteraRequest {}

// // MsgWriteCriteraResponse
// message MsgWriteCriteraResponse {}

// // MsgAddToCriteraRequest
// message MsgAddToCriteraRequest {}

// // MsgAddToCriteraResponse
// message MsgAddToCriteraResponse {}
